--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,6 +44,13 @@ steps:
     arguments: '--no-restore --configuration Release'
     projects: '**/*.csproj'
 - task: DotNetCoreCLI@2
+  displayName: 'Run unit tests - $(buildConfiguration)'
+  inputs:
+    command: 'test'
+    arguments: '--no-build --configuration $(buildConfiguration)'
+    publishTestResults: true
+    projects: '**/*.Tests.csproj'
+- task: DotNetCoreCLI@2
   displayName: 'Publish the project - Release'
   inputs:
     command: 'publish'
